--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>gunjou's portfolio</title>
   </head>
-  <body>
+  <body bgcolor=#87ceeb>
     <noscript>Javascriptを有効化させてください</noscript>
     <div id="root"></div>
   </body>
