Twitterカードの設定

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,12 @@
       name="description"
       content="gunjou's portfolio"
     />
+    <meta name="twitter:card" content="summary"/>
+    <meta name="twitter:site" content="@chuni_character"/>
+    <meta property="og:url" content="https://cobaltbluesky.github.io/profile"/>
+    <meta property="og:title" content="gunjou's portfolio(仮)"/>
+    <meta property="og:description" content="gunjouの自己紹介サイト"/>
+    <meta property="og:image" content="%PUBLIC_URL/shizuku192.png"/>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/shizuku192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>gunjou's portfolio</title>
